--- a/VRChat/77/1326277.html
+++ b/VRChat/77/1326277.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "sN+GeX+QR5xRIHCpSFvdZiG2FHNIjQ+0W2Iu2iqgM2U="></script>
+    "P6XID3Kh4+CCW+56dlR00FyknZNc3+f9+LKSkuaOv6k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け】角度で色が変わる宝石セット【アクセサリー】","description":"https://twitter.com/chemical_15_VR/status/1119937097727533057\n※動いている画像の添付されたツイートのリンクです\n\n■角度や距離で色が変わる宝石のシェーダーとFBXのセットです。unityPackage形式となっています。\n\n■使い方\nイヤリング風のモデルとペンダントトップ風モデルが入っています。\nイヤリング風モデルはDynamicBone対応かつモーフで奥行のサイズが変えられます。\n\nMaterialのセットアップ方法は同梱の使い方.pngを参照にしてください\n\nペンダントトップ風モデルは\nVRchat向けアバター用ネックレスチェーン\nhttps://chemical15.booth.pm/items/1052437\n\nと組み合わせると簡単にネックレスにできます。\n\n■免責事項\nこのデータの使用によって発生したいかなる損害・損失・トラブルについて、作者は一切の責任を負いません\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布（改造・未改造問わず）\n※アバターペデスタルへの使用も再配布にあたります\nその他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n■やっていい事\n改変\n\n※上記以外の使用については作者にお問い合わせください。\n\n連絡先：https://twitter.com/chemical_15_VR\n","url":"https://booth.pm/ja/items/1326277","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1326277/e5173a44-5929-4db5-b4fb-a3d472c9fc60_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sN+GeX+QR5xRIHCpSFvdZiG2FHNIjQ+0W2Iu2iqgM2U="></script>
+    nonce="P6XID3Kh4+CCW+56dlR00FyknZNc3+f9+LKSkuaOv6k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -581,7 +581,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
